...
      },
      child: Scaffold(
        appBar: AppBar(
          title: Consumer<WorkoutViewModel>(
            builder: (context, viewModel, child) {
              return Text(viewModel.workout?.name.isEmpty ?? true
                  ? 'New Workout'
                  : viewModel.workout!.name);
            },
          ),
          leading: BackButton(
            onPressed: () async {
              final canLeave = await _showUnsavedDialog(context);
...
